<resources>
    <string name="app_name">LokaCar</string>

    <!-- Strings related to login -->
    <string name="nom_agence">Agence</string>
    <string name="prompt_agence">nom de l\'Agence</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_agency">Nom Agence invalide</string>
    <string name="error_invalid_password">Mot de passe invalide</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="ajouter">Ajouter un véhicule</string>
    <string name="configuration">Configuration</string>
    <string name="title_activity_list_vehicule">ListVehiculeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pick_time">dateNaissance</string>
    <string name="selectDateNaissance">Date Naissance</string>
    <string name="prompt_nom">Nom</string>
    <string name="prompt_prenom">prenom</string>
    <string name="prompt_adresse">Adresse</string>
    <string name="prompt_code_postal">Code Postal</string>
    <string name="prompt_ville">Ville</string>
    <string name="prompt_tel">Téléphone</string>
    <string name="prompt_permis">Numéro permis</string>
    <string name="prompt_date_naissance">Date naissance</string>
    <string name="afficherVehiculesDispo">Afficher seulement les véhicules disponibles</string>
    <string name="LouerVéhicule">Louer Véhicule</string>
    <string name="prompt_nbrePlaces">Nombre de places</string>
    <string name="prompt_immatriculation">Plaque d\'immatriculation</string>
    <string name="prompt_prix">Tarif location journée</string>
    <string name="prompt_modele">Modèle du véhicule</string>
    <string name="prompt_marque">Marque du véhicule</string>
    <string name="LouerVehicule">Location  Véhicule</string>
    <string name="RetourVehicule">Restitution Véhicule</string>
    <string name="ajouterClient">Ajouter client</string>

</resources>
